# asta

./: bootstrap.md
asta-api/: .gitignore  main.py  models.py  nixpacks.toml  pyproject.toml  requirements.txt  services.py
asta-web/: nixpacks.toml  package-lock.json  package.json
asta-web/app/: page.tsx
asta-web/app/growth/: page.tsx
asta-web/app/maternal/: page.tsx
asta-web/app/nutrition/: page.tsx
asta-web/components/: food-icons.tsx  growth-chart.tsx  risk-gauge.tsx
asta-web/lib/: api.ts
asta-web/types/: index.ts
