[project]
name = "asta-api"
version = "0.1.0"
description = "AI Stunting Triage Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn==0.42.0",
    "sqlmodel==0.0.37",
    "numpy==2.4.3",
    "python-multipart==0.0.20",
    "scalar-fastapi",
]

[tool.uv]
managed = true
